// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications should display notifications when you click the alert button 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-6"
    aria-expanded="true"
    class="p-1 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 relative bg-gray-900 text-gray-400 focus:ring-offset-gray-900 hover:text-gray-100 focus:ring-gray-500"
    id="headlessui-popover-button-5"
    type="button"
  >
    <span
      class="sr-only"
    >
      Notifications
    </span>
    <svg
      aria-hidden="true"
      class="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <span
      class="rounded-full text-sm font-medium bg-red-800 text-red-100 absolute top-0 right-0 p-0.5"
    >
      <span
        class="sr-only"
      >
        (
        New
        )
      </span>
      <svg
        aria-hidden="true"
        class="h-2.5 w-2.5"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
        />
      </svg>
    </span>
  </button>
  <div
    data-popper-escaped="true"
    data-popper-placement="bottom"
    data-popper-reference-hidden="true"
    id="headlessui-popover-panel-6"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 18px);"
  >
    <div
      class="flex flex-col"
    >
      <div
        class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
      >
        <div
          class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8"
        >
          <div
            class="shadow overflow-hidden border-b border-gray-200"
          >
            <table
              class="min-w-full table-auto"
            >
              <thead
                class="font-display font-semibold"
              >
                <tr
                  class="border-b-2 bg-blue-700 border-blue-800 text-blue-100"
                >
                  <th
                    class="px-6 py-3 whitespace-nowrap text-center"
                    colspan="1"
                  >
                    Notifications
                  </th>
                </tr>
              </thead>
              <tbody
                class="font-sans text-sm"
              >
                <tr
                  class="border-b-2 bg-gray-100 border-gray-200 text-gray-700"
                >
                  <td
                    class="px-6 py-3 bg-white bg-opacity-70 whitespace-nowrap text-left"
                  >
                    Alert 1
                  </td>
                </tr>
                <tr
                  class="border-b-2 bg-gray-100 border-gray-200 text-gray-700"
                >
                  <td
                    class="px-6 py-3 bg-white bg-opacity-70 whitespace-nowrap text-left"
                  >
                    Alert 2
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications should not show an alert notification 1`] = `
<div>
  <button
    aria-expanded="false"
    class="p-1 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 relative bg-gray-900 text-gray-400 focus:ring-offset-gray-900 hover:text-gray-100 focus:ring-gray-500"
    id="headlessui-popover-button-3"
    type="button"
  >
    <span
      class="sr-only"
    >
      Notifications
    </span>
    <svg
      aria-hidden="true"
      class="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </button>
</div>
`;

exports[`Notifications should show an alert notification 1`] = `
<div>
  <button
    aria-expanded="false"
    class="p-1 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 relative bg-gray-900 text-gray-400 focus:ring-offset-gray-900 hover:text-gray-100 focus:ring-gray-500"
    id="headlessui-popover-button-1"
    type="button"
  >
    <span
      class="sr-only"
    >
      Notifications
    </span>
    <svg
      aria-hidden="true"
      class="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <span
      class="rounded-full text-sm font-medium bg-red-800 text-red-100 absolute top-0 right-0 p-0.5"
    >
      <span
        class="sr-only"
      >
        (
        New
        )
      </span>
      <svg
        aria-hidden="true"
        class="h-2.5 w-2.5"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
        />
      </svg>
    </span>
  </button>
</div>
`;
